SUBDIRS = src

CLEANFILES = core *.core *~
DISTCLEANFILES = autom4te*.cache config.status config.log
MAINTAINERCLEANFILES = aclocal.m4 install-sh mkinstalldirs \
			           missing configure config.guess config.sub config.h.in depcomp\
			           ltconfig ltmain.sh COPYING INSTALL Makefile.in stamp-h.in stamp-h1
